# claimplane-mcp

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT_GUIDE_FOR_PARTNER.md  DEVELOPMENT_WORKFLOW.md  DOCS_CLEANUP_ANALYSIS.md  Dockerfile  Dockerfile.webhook  GOOGLE_VISION_SETUP.md  IMPLEMENTATION_SUMMARY.md  MAGIC_LINK_FIX_SUMMARY.md  MCP_USAGE_GUIDE.md  OCR_SESSION_SUMMARY.md  OPEN_SOURCE_OPPORTUNITIES.md  PASSWORDLESS_AUTH_PROGRESS.md  PASSWORDLESS_AUTH_STATUS.md  PHASE2_TEST_STATUS.md  PHASE3_COMPLETION_PLAN.md  PHASE3_IMPLEMENTATION_STATUS.md  PROJECT_ARCHITECTURE_2025-11-30.md  README.md  ROADMAP.md  SECURITY_AUDIT_2026-01-30.md  SECURITY_AUDIT_2026-01-31.md  SECURITY_AUDIT_REPORT.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  TESTING_PLAN.md  TEST_DRAFT_RESUME_UX.md  TEST_EXECUTION_REPORT.md  TEST_REPORT.md  TEST_RESULTS_SESSION_1.md  TEST_RESULTS_SESSION_2_EXTENDED.md  TOKEN_COLLISION_FIX.md  VERSIONING.md  WP107_GOOGLE_VISION_MIGRATION.md  (+57 more)
.claude/: ARCHITECTURE_DECISIONS.md  BRANCH_POLICY.md
.git-hooks/: pre-commit
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
API/: API  openapi.yaml  openapi_spec.yaml
FrontEnd_Claude/: .env.example  CHANGELOG.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.ts  vite.config.ts
FrontEnd_Grok/: README.md  index.html
FrontEnd_Grok1/: .env.example  README.md  index.html  package-lock.json  package.json
FrontEnd_Haiku/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Postgres/: docker-compose.yml  nginx.conf
ROADMAP/: CLOUDFLARE_DEPLOYMENT.md  FUTURE_ENHANCEMENTS.md  PHASE_1_ADMIN_DASHBOARD.md  PHASE_2_ASYNC_NOTIFICATIONS.md  README.md  (+11 more)
(+481 files in other folders)
